// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CandidateSessionView scheduling states renders locked state with countdown and day windows 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-3xl space-y-4 p-6"
  >
    <div>
      <h1
        class="text-lg font-semibold"
      >
        Trial locked until start
      </h1>
      <p
        class="mt-1 text-sm text-gray-600"
      >
        Infra Trial (Backend Engineer) opens when Day 1 starts.
      </p>
    </div>
    <div
      class="rounded-md border border-blue-200 bg-blue-50 p-4"
    >
      <p
        class="text-sm text-blue-900"
      >
        Starts in 
        <span
          class="font-semibold"
        >
          2d 01h 30m 10s
        </span>
      </p>
      <p
        class="mt-1 text-xs text-blue-800"
      >
        Opens on Thu, Jan 1, 2099 at 9:00 AM (America/New_York)
      </p>
    </div>
    <div
      class="rounded-md border border-gray-200 p-4"
    >
      <h2
        class="text-sm font-semibold text-gray-900"
      >
        Day windows
      </h2>
      <ul
        class="mt-2 space-y-2"
      >
        <li
          class="rounded-md border border-gray-200 p-3 text-sm"
        >
          <div
            class="font-medium"
          >
            Day 1
          </div>
          <div
            class="text-gray-700"
          >
            Thu, Jan 1, 2099
          </div>
          <div
            class="text-gray-600"
          >
            9:00 AM - 5:00 PM
          </div>
        </li>
        <li
          class="rounded-md border border-gray-200 p-3 text-sm"
        >
          <div
            class="font-medium"
          >
            Day 2
          </div>
          <div
            class="text-gray-700"
          >
            Fri, Jan 2, 2099
          </div>
          <div
            class="text-gray-600"
          >
            9:00 AM - 5:00 PM
          </div>
        </li>
      </ul>
      <p
        class="mt-3 text-xs text-gray-600"
      >
        Current window state: upcoming
      </p>
    </div>
    <button
      class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-white text-gray-800 border-gray-300 hover:bg-gray-50 focus:ring-blue-500 px-4 py-2 text-sm"
    >
      Refresh
    </button>
  </div>
</DocumentFragment>
`;

exports[`CandidateSessionView scheduling states renders scheduling confirm state 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-3xl space-y-5 p-6"
  >
    <div>
      <h1
        class="text-lg font-semibold"
      >
        Pick your start date
      </h1>
      <p
        class="mt-1 text-sm text-gray-600"
      >
        Confirm your local schedule before starting Infra Trial (Backend Engineer).
      </p>
    </div>
    <div
      class="rounded-md border border-slate-200 bg-slate-50 p-4"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <h3
          class="text-sm font-semibold text-slate-900"
        >
          AI-assisted evaluation notice
        </h3>
        <span
          class="inline-flex items-center rounded-full border border-slate-300 bg-white px-2 py-0.5 text-xs text-slate-700"
        >
          Notice mvp1
        </span>
      </div>
      <ul
        class="mt-2 list-disc space-y-1 pl-5 text-sm text-slate-700"
      >
        <li>
          Your Day 4 video and transcript may be used for evaluation by our team and AI-assisted review tools.
        </li>
        <li>
          Reviewers use this material to assess communication clarity and technical reasoning.
        </li>
      </ul>
      <a
        class="mt-2 inline-block text-sm text-blue-700 underline"
        href="/candidate/what-we-evaluate"
      >
        What we evaluate
      </a>
    </div>
    <div
      class="space-y-4 rounded-md border border-gray-200 p-4"
    >
      <div
        class="rounded-md border border-blue-200 bg-blue-50 p-3 text-sm text-blue-900"
      >
        <p>
          Starts on 
          <span
            class="font-semibold"
          >
            Thu, Jan 1, 2099
          </span>
           at 
          <span
            class="font-semibold"
          >
            9:00 AM (Your time)
          </span>
          .
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-700"
        >
          GitHub username: 
          <span
            class="font-semibold"
          >
            octocat
          </span>
        </p>
      </div>
      <div>
        <h2
          class="text-sm font-semibold text-gray-900"
        >
          5-day schedule preview
        </h2>
        <ul
          class="mt-2 space-y-2"
        >
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 1
            </div>
            <div
              class="text-gray-700"
            >
              Thu, Jan 1, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
          <li
            class="rounded-md border border-gray-200 p-3 text-sm"
          >
            <div
              class="font-medium"
            >
              Day 2
            </div>
            <div
              class="text-gray-700"
            >
              Fri, Jan 2, 2099
            </div>
            <div
              class="text-gray-600"
            >
              9:00 AM - 5:00 PM
            </div>
          </li>
        </ul>
      </div>
      <div
        class="flex gap-3 pt-1"
      >
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-white text-gray-800 border-gray-300 hover:bg-gray-50 focus:ring-blue-500 px-4 py-2 text-sm"
        >
          Back
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-blue-600 text-white border-transparent hover:bg-blue-700 focus:ring-blue-500 px-4 py-2 text-sm"
        >
          Confirm schedule
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CandidateSessionView scheduling states renders scheduling form state 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-3xl space-y-5 p-6"
  >
    <div>
      <h1
        class="text-lg font-semibold"
      >
        Pick your start date
      </h1>
      <p
        class="mt-1 text-sm text-gray-600"
      >
        Confirm your local schedule before starting Infra Trial (Backend Engineer).
      </p>
    </div>
    <div
      class="rounded-md border border-slate-200 bg-slate-50 p-4"
    >
      <div
        class="flex flex-wrap items-center gap-2"
      >
        <h3
          class="text-sm font-semibold text-slate-900"
        >
          AI-assisted evaluation notice
        </h3>
        <span
          class="inline-flex items-center rounded-full border border-slate-300 bg-white px-2 py-0.5 text-xs text-slate-700"
        >
          Notice mvp1
        </span>
      </div>
      <ul
        class="mt-2 list-disc space-y-1 pl-5 text-sm text-slate-700"
      >
        <li>
          Your Day 4 video and transcript may be used for evaluation by our team and AI-assisted review tools.
        </li>
        <li>
          Reviewers use this material to assess communication clarity and technical reasoning.
        </li>
      </ul>
      <a
        class="mt-2 inline-block text-sm text-blue-700 underline"
        href="/candidate/what-we-evaluate"
      >
        What we evaluate
      </a>
    </div>
    <div
      class="space-y-4 rounded-md border border-gray-200 p-4"
    >
      <label
        class="block text-sm font-medium text-gray-800"
      >
        Start date
      </label>
      <input
        aria-label="Start date"
        class="block w-full rounded-md border border-gray-300 px-3 py-2 text-sm shadow-sm focus:border-blue-500 focus:outline-none focus:ring-1 focus:ring-blue-500"
        type="date"
        value="2099-01-01"
      />
      <label
        class="block text-sm font-medium text-gray-800"
      >
        Timezone (IANA)
      </label>
      <input
        aria-label="Timezone"
        class="block w-full rounded-md border border-gray-300 px-3 py-2 text-sm shadow-sm focus:border-blue-500 focus:outline-none focus:ring-1 focus:ring-blue-500"
        list="candidate-timezone-list"
        placeholder="America/New_York"
        type="text"
        value="America/New_York"
      />
      <datalist
        id="candidate-timezone-list"
      >
        <option
          value="America/New_York"
        />
        <option
          value="America/Chicago"
        />
      </datalist>
      <p
        class="text-xs text-gray-500"
      >
        Detected timezone: America/New_York
      </p>
      <label
        class="block text-sm font-medium text-gray-800"
      >
        GitHub username
      </label>
      <input
        aria-label="GitHub username"
        class="block w-full rounded-md border border-gray-300 px-3 py-2 text-sm shadow-sm focus:border-blue-500 focus:outline-none focus:ring-1 focus:ring-blue-500"
        placeholder="octocat"
        type="text"
        value="octocat"
      />
      <p
        class="text-xs text-gray-500"
      >
        Use the GitHub username that should receive repo access.
      </p>
      <div
        class="flex gap-3 pt-2"
      >
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-white text-gray-800 border-gray-300 hover:bg-gray-50 focus:ring-blue-500 px-4 py-2 text-sm"
        >
          Back to dashboard
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md border font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 bg-blue-600 text-white border-transparent hover:bg-blue-700 focus:ring-blue-500 px-4 py-2 text-sm"
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
